# artstudio-books-catalog

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: generate-pdf-from-sheet.yml  update-books.yml
apps_script/: Code.gs  README.md
docs/: REPO_AUDIT.md  SETUP_CHECKLIST.md
scripts/: run_local.ps1  run_local.sh
src/books_catalog/: __init__.py  auth.py  classifier.py  drive.py  main.py  models.py  parser.py  pdf.py  pdf_only.py  settings.py  sheets.py
templates/: catalog.html.j2  style.css
tests/: test_ozon_parser.py
