[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "artstudio-books-catalog"
version = "0.1.0"
description = "Google Sheets + GitHub Actions book parser and PDF catalog generator for ARTSTUDIO lounge selection."
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
